--- a/style.css
+++ b/style.css
@@ -66,7 +66,12 @@ body {
   z-index: 20;
 }
 
-
 .hidden {
   display: none;
+}
+
+#tree-table td {
+  min-width: 50px;
+  min-height: 30px;
+  border: 1px dotted red;
 }
