--- a/style.css
+++ b/style.css
@@ -1,31 +1,43 @@
+@import url('https://fonts.googleapis.com/css?family=Libre+Franklin:200,300,600');
+
 :root {
   --black: black;
   --lt-grey: #f8f8f8;
   --med-grey: #999;
   --dk-grey: #444;
-  --callout-button: purple;
+  --callout: purple;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica", "Roboto", "Droid Sans", "Arial", sans-serif;
+  font-family: 'Libre Franklin', -apple-system, BlinkMacSystemFont, 'Helvetica', 'Arial', sans-serif;
+  font-weight: 300;
   margin: 5px;
 }
 
-#filebar {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  margin: 0;
-  padding: 10px;
+#main {
+  margin: 75px 0 0 10px;
 }
 
-#filebar button {
-  width: 48px;
-  height: 48px;
-  border-radius: 24px;
-  background-color: var(--callout-button);
-  border: none;
-  color: white;
+#toolbar {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  margin: 0;
+  padding: 10px;
+  /*border-bottom: 1px solid var(--lt-grey);*/
+  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0..1);
+}
+
+#toolbar button {
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  /*background-color: white;*/
+  border: 1px solid white;
+  color: var(--med-grey);
   text-align: center;
   font-size: 16pt;
   padding: 0;
@@ -36,26 +48,25 @@ body {
   -moz-user-select: none;*/
 }
 
-#filebar button:focus {
+#toolbar button:focus {
   outline: none;
 }
 
-#filebar button:hover {
-  opacity: 0.9;
-  box-shadow: 0 0 6px 0 rgba(255, 0, 255, 0.15);
-    -moz-box-shadow: 0 0 6px 0 rgba(255, 0, 255, 0.15);
-    -webkit-box-shadow: 0 0 10px 0 rgba(255, 0, 255, 0.3);
+#toolbar button:hover {
+  /*background-color: var(--callout);*/
+  background-color: rgba(255, 0, 255, 0.05);
+  border: 1px solid var(--callout);
+  color: var(--callout);
+  /*opacity: 0.9;*/
 }
 
-#filebar button:hover:after {
+#toolbar button:hover:after {
   content: attr(data-tooltip);
   margin: 0;
   padding: 4px;
   border-radius: 2px;
-  /*background: var(--dk-grey);*/
-  color: var(--callout-button);
+  color: var(--callout);
   font-size: 9pt;
-  /*line-height: 40px;*/
   font-weight: 700;
   position: absolute;
   left: 110%;
@@ -70,8 +81,13 @@ body {
   display: none;
 }
 
+#tree-table {
+  border-collapse: collapse;
+}
+
 #tree-table td {
-  min-width: 50px;
-  min-height: 30px;
-  border: 1px dotted red;
+  margin: 0;
+  padding: 3px 30px 3px 0;
+  /*border: 1px dotted red;*/
+  border-top: 1px solid var(--lt-grey);
 }
