--- a/style.css
+++ b/style.css
@@ -14,17 +14,23 @@ body {
   margin: 5px;
 }
 
+.disabled {
+  opacity: 0.3;
+}
+
 #main {
-  margin: 75px 0 0 10px;
+  margin: 60px 0 0 10px;
 }
 
 #toolbar {
   position: absolute;
+  text-align: right;
   width: 100%;
-  left: 0;
+  /*left: 0;*/
   top: 0;
+  right: 0;
   margin: 0;
-  padding: 10px;
+  padding: 10px 10px;
   /*border-bottom: 1px solid var(--lt-grey);*/
   box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
@@ -32,10 +38,10 @@ body {
 }
 
 #toolbar button {
-  width: 40px;
-  height: 40px;
-  border-radius: 20px;
-  /*background-color: white;*/
+  /*width: 40px;*/
+  height: 25px;
+  /*border-radius: 20px;*/
+  background-color: white;
   border: 1px solid white;
   color: var(--med-grey);
   text-align: center;
@@ -54,8 +60,8 @@ body {
 
 #toolbar button:hover {
   /*background-color: var(--callout);*/
-  background-color: rgba(255, 0, 255, 0.05);
-  border: 1px solid var(--callout);
+  /*background-color: rgba(255, 0, 255, 0.05);*/
+  /*border: 1px solid var(--callout);*/
   color: var(--callout);
   /*opacity: 0.9;*/
 }
@@ -69,8 +75,8 @@ body {
   font-size: 9pt;
   font-weight: 700;
   position: absolute;
-  left: 110%;
-  top: 50%;
+  left: 0;
+  top: 140%;
   height: 18px;
   margin-top: -13px;
   white-space: nowrap;
