--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  font-family: 'Libre Franklin', -apple-system, BlinkMacSystemFont, 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Libre Franklin', 'Helvetica', 'Arial', sans-serif;
   font-weight: 300;
   margin: 5px;
 }
@@ -24,34 +24,50 @@ body {
 
 #toolbar {
   position: absolute;
-  text-align: right;
+  /*font-size: 10pt;*/
+  font-weight: 400;
   width: 100%;
   /*left: 0;*/
   top: 0;
-  right: 0;
+  left: 0;
+  /*right: 0;*/
   margin: 0;
   padding: 10px 10px;
-  /*border-bottom: 1px solid var(--lt-grey);*/
-  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0..1);
+  border-bottom: 1px solid #ddd;
+  box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.06);
+    -moz-box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.06);
+    -webkit-box-shadow: 0 1px 12px 0 rgba(0, 0, 0, 0.06);
+}
+
+#toolbar .left {
+  float: left;
+}
+
+#toolbar .right {
+  float: right;
+  margin-right: 20px;
+  /*text-align: right;*/
 }
 
 #toolbar button {
   /*width: 40px;*/
-  height: 25px;
-  /*border-radius: 20px;*/
+  /*height: 25px;*/
+  border-radius: 2px;
   background-color: white;
   border: 1px solid white;
   color: var(--med-grey);
   text-align: center;
-  font-size: 16pt;
-  padding: 0;
-  margin: 0;
+  font-size: 10pt;
+  padding: 5px;
+  margin: -5px 0;
   position: relative;
   /*user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;*/
+}
+
+#toolbar button i {
+  margin-right: 5px;
 }
 
 #toolbar button:focus {
@@ -59,14 +75,11 @@ body {
 }
 
 #toolbar button:hover {
-  /*background-color: var(--callout);*/
-  /*background-color: rgba(255, 0, 255, 0.05);*/
-  /*border: 1px solid var(--callout);*/
   color: var(--callout);
-  /*opacity: 0.9;*/
+  border: 1px solid var(--callout);
 }
 
-#toolbar button:hover:after {
+/*#toolbar button:hover:after {
   content: attr(data-tooltip);
   margin: 0;
   padding: 4px;
@@ -81,7 +94,7 @@ body {
   margin-top: -13px;
   white-space: nowrap;
   z-index: 20;
-}
+}*/
 
 .hidden {
   display: none;
